--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,21 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nrf52832-hal = { version = "0.12.1", features = ["rt"] }
-embedded-hal = { version = "0.2.4", features = ["unproven"] }
+#nrf52832-hal = { version = "0.12.1", features = ["rt"] }
+#embedded-hal = { version = "0.2.4", features = ["unproven"] }
 cortex-m = "0.7.1"
 cortex-m-rt = { version = "0.6.13", features = ["device"] }
 rtt-target = { version = "0.3.0", features = ["cortex-m"] }
 #display-interface-spi = "0.4.0"
 #st7789 = "0.5.0"
 #embedded-graphics = "0.6.2"
-async-embedded = { path = "../../contrib/async-on-embedded/async-embedded" }
 heapless = "0.6.1"
 chrono = { version = "0.4.19", default-features = false }
+embassy = { path = "../../contrib/embassy/embassy" }
+embassy-nrf = { path = "../../contrib/embassy/embassy-nrf", features = ["52832"] }
 
 [patch.crates-io]
-nrf52832-hal = { path = "../../contrib/nrf-hal/nrf52832-hal" }
+#nrf52832-hal = { path = "../../contrib/nrf-hal/nrf52832-hal" }
+
+[profile.release]
+#debug = true
