--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,13 @@ cortex-m-rt = { version = "0.6.13", features = ["device"] }
 rtt-target = { version = "0.3.0", features = ["cortex-m"] }
 #display-interface-spi = "0.4.0"
 #st7789 = "0.5.0"
-#embedded-graphics = "0.6.2"
+embedded-graphics = "0.6.2"
 heapless = "0.6.1"
 chrono = { version = "0.4.19", default-features = false }
 embassy = { path = "../../contrib/embassy/embassy" }
 embassy-nrf = { path = "../../contrib/embassy/embassy-nrf", features = ["52832"] }
+pin-utils = "0.1.0"
+kurbo = { path = "../../contrib/kurbo", default-features=false }
 
 [patch.crates-io]
 #nrf52832-hal = { path = "../../contrib/nrf-hal/nrf52832-hal" }
