--- a/.cargo/config
+++ b/.cargo/config
@@ -4,5 +4,7 @@ target = "thumbv7em-none-eabihf"
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 runner = 'arm-none-eabi-gdb'
 rustflags = [
+    "-C", "link-arg=--nmagic",
     "-C", "link-arg=-Tlink.x",
+    "-C", "link-arg=-Tdefmt.x",
 ]
