--- a/Embed.toml
+++ b/Embed.toml
@@ -6,7 +6,7 @@
 # Serial number
 # serial = "12345678"
 # The protocol to be used for communicating with the target.
-protocol = "Jtag"
+protocol = "Swd"
 # The speed in kHz of the data link to the target.
 # speed = 1337
 
@@ -42,6 +42,7 @@ enabled = true
 # A list of channel associations to be displayed. If left empty, all channels are displayed.
 channels = [
     # { up = 0, down = 0, name = "name", format = "String" }
+    { up = 0, name = "debug", format = "Defmt" }
 ]
 # The duration in ms for which the logger should retry to attach to RTT.
 timeout = 3000
@@ -54,7 +55,6 @@ log_path = "./rtt_logs"
 
 [default.gdb]
 # Whether or not a GDB server should be opened after flashing.
-# This is exclusive and cannot be used with RTT at the moment.
 enabled = false
 # The connection string in host:port format wher the GDB server will open a socket.
 gdb_connection_string = "127.0.0.1:1337"
