--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,17 +9,7 @@ resolver = "2"
 [features]
 
 default = [
-  "defmt-default"
 ]
-
-# do NOT modify these features
-defmt-default = []
-defmt-trace = []
-defmt-debug = []
-defmt-info = []
-defmt-warn = []
-defmt-error = []
-
 
 [dependencies]
 #nrf52832-hal = { version = "0.12.1", features = ["rt"] }
@@ -30,18 +20,18 @@ cortex-m-rt = { version = "0.6.13", features = ["device"] }
 #display-interface-spi = "0.4.0"
 #st7789 = "0.5.0"
 embedded-graphics = { path = "../../contrib/embedded-graphics", features = ["defmt_support"]}
-heapless = "0.6.1"
+heapless = { version = "0.7.5", features = ["defmt-impl"] }
 chrono = { version = "0.4.19", default-features = false }
 embassy = { path = "../../contrib/embassy/embassy", features = ["defmt"] }
 #embassy-extras = { path = "../../contrib/embassy/embassy-extras", features = ["defmt"] }
-embassy-nrf = { path = "../../contrib/embassy/embassy-nrf", features = ["nrf52832", "defmt", "time-driver-rtc1", "gpiote", "defmt-trace"] }
+embassy-nrf = { path = "../../contrib/embassy/embassy-nrf", features = ["nrf52832", "defmt", "time-driver-rtc1", "gpiote"] }
 pin-utils = "0.1.0"
 futures = { version = "0.3.13", default-features = false, features = ["async-await"] }
 #enigita = { version = "0.1.0", path = "enigita" }
 nrf-softdevice-s112 = { version = "0.1.1", path = "../../contrib/nrf-softdevice/nrf-softdevice-s112" }
-defmt-rtt = { version = "0.2.0"}
-defmt = { version = "0.2.3"} 
 panic-abort = "0.3.2"
+defmt = "0.3.0"
+defmt-rtt = "0.3.0"
 
 [dependencies.nrf-softdevice] 
 version = "0.1.0"
@@ -61,7 +51,7 @@ nrf-softdevice = { path = "../../contrib/nrf-softdevice/nrf-softdevice" }
 
 [profile.dev]
 codegen-units = 1
-debug = 0
+debug = 2
 debug-assertions = true # <-
 incremental = false
 opt-level = 2 # <-
@@ -90,4 +80,5 @@ overflow-checks = false # <-
 members = [
     ".",
     "tools",
+    "font-convert",
 ]
